Update routes + access

--- a/src/main/webapp/app/entities/book/book-detail.component.html
+++ b/src/main/webapp/app/entities/book/book-detail.component.html
@@ -19,13 +19,13 @@
                 <dt><span jhiTranslate="nidAuxHistoiresApp.book.image">Image</span></dt>
                 <dd>
                     <span *ngFor="let image of book.images; let last = last">
-                        <a [routerLink]="['/image', image?.id, 'view']">{{ image.id }}</a>{{ last ? '' : ', ' }}
+                        <a [routerLink]="['/entities/image', image?.id, 'view']">{{ image.id }}</a>{{ last ? '' : ', ' }}
                     </span>
                 </dd>
                 <dt><span jhiTranslate="nidAuxHistoiresApp.book.cover">Cover</span></dt>
                 <dd>
                     <div *ngIf="book.coverId">
-                        <a [routerLink]="['/image', book.coverId, 'view']">{{ book.coverId }}</a>
+                        <a [routerLink]="['/entities/image', book.coverId, 'view']">{{ book.coverId }}</a>
                     </div>
                 </dd>
             </dl>
@@ -37,7 +37,7 @@
             </button>
 
             <button type="button"
-                    [routerLink]="['/book', book.id, 'edit']"
+                    [routerLink]="['/entities/book', book.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">Edit</span>
             </button>
