--- a/src/main/webapp/app/entities/book/book.component.html
+++ b/src/main/webapp/app/entities/book/book.component.html
@@ -2,7 +2,7 @@
     <h2 id="page-heading">
         <span jhiTranslate="nidAuxHistoiresApp.book.home.title">Books</span>
 
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-book" [routerLink]="['/book/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-book" [routerLink]="['/entities/book/new']">
             <fa-icon icon="plus"></fa-icon>
             <span  jhiTranslate="nidAuxHistoiresApp.book.home.createLabel">
             Create a new Book
@@ -31,25 +31,25 @@
             </thead>
             <tbody>
                 <tr *ngFor="let book of books ;trackBy: trackId">
-                    <td><a [routerLink]="['/book', book.id, 'view']">{{ book.id }}</a></td>
+                    <td><a [routerLink]="['/entities/book', book.id, 'view']">{{ book.id }}</a></td>
                     <td>{{ book.name }}</td>
                     <td>{{ book.author }}</td>
                     <td>
                         <div *ngIf="book.coverId">
-                            <a [routerLink]="['/image', book.coverId , 'view']" >{{ book.coverId }}</a>
+                            <a [routerLink]="['/entities/image', book.coverId , 'view']" >{{ book.coverId }}</a>
                         </div>
                     </td>
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
-                                    [routerLink]="['/book', book.id, 'view']"
+                                    [routerLink]="['/entities/book', book.id, 'view']"
                                     class="btn btn-info btn-sm">
                                 <fa-icon icon="eye"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
 
                             <button type="submit"
-                                    [routerLink]="['/book', book.id, 'edit']"
+                                    [routerLink]="['/entities/book', book.id, 'edit']"
                                     class="btn btn-primary btn-sm">
                                 <fa-icon icon="pencil-alt"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
