--- a/src/main/webapp/app/entities/image/image-detail.component.html
+++ b/src/main/webapp/app/entities/image/image-detail.component.html
@@ -39,7 +39,7 @@
             </button>
 
             <button type="button"
-                    [routerLink]="['/image', image.id, 'edit']"
+                    [routerLink]="['/entities/image', image.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">Edit</span>
             </button>
