--- a/src/main/webapp/app/entities/image/image.component.html
+++ b/src/main/webapp/app/entities/image/image.component.html
@@ -2,7 +2,7 @@
     <h2 id="page-heading">
         <span jhiTranslate="nidAuxHistoiresApp.image.home.title">Images</span>
 
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-image" [routerLink]="['/image/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-image" [routerLink]="['/entities/image/new']">
             <fa-icon icon="plus"></fa-icon>
             <span  jhiTranslate="nidAuxHistoiresApp.image.home.createLabel">
             Create a new Image
@@ -31,7 +31,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let image of images ;trackBy: trackId">
-                    <td><a [routerLink]="['/image', image.id, 'view']">{{ image.id }}</a></td>
+                    <td><a [routerLink]="['/entities/image', image.id, 'view']">{{ image.id }}</a></td>
                     <td>{{ image.name }}</td>
                     <td>
                         <a *ngIf="image.picture" (click)="openFile(image.pictureContentType, image.picture)">
@@ -48,14 +48,14 @@
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
-                                    [routerLink]="['/image', image.id, 'view']"
+                                    [routerLink]="['/entities/image', image.id, 'view']"
                                     class="btn btn-info btn-sm">
                                 <fa-icon icon="eye"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
 
                             <button type="submit"
-                                    [routerLink]="['/image', image.id, 'edit']"
+                                    [routerLink]="['/entities/image', image.id, 'edit']"
                                     class="btn btn-primary btn-sm">
                                 <fa-icon icon="pencil-alt"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
