--- a/src/main/webapp/app/entities/part/part.component.html
+++ b/src/main/webapp/app/entities/part/part.component.html
@@ -2,7 +2,7 @@
     <h2 id="page-heading">
         <span jhiTranslate="nidAuxHistoiresApp.part.home.title">Parts</span>
 
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-part" [routerLink]="['/part/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-part" [routerLink]="['/entities/part/new']">
             <fa-icon icon="plus"></fa-icon>
             <span  jhiTranslate="nidAuxHistoiresApp.part.home.createLabel">
             Create a new Part
@@ -32,26 +32,26 @@
             </thead>
             <tbody>
                 <tr *ngFor="let part of parts ;trackBy: trackId">
-                    <td><a [routerLink]="['/part', part.id, 'view']">{{ part.id }}</a></td>
+                    <td><a [routerLink]="['/entities/part', part.id, 'view']">{{ part.id }}</a></td>
                     <td>{{ part.name }}</td>
                     <td>{{ part.description }}</td>
                     <td>{{ part.number }}</td>
                     <td>
                         <div *ngIf="part.bookId">
-                            <a [routerLink]="['/book', part.bookId , 'view']" >{{ part.bookId }}</a>
+                            <a [routerLink]="['/entities/book', part.bookId , 'view']" >{{ part.bookId }}</a>
                         </div>
                     </td>
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
-                                    [routerLink]="['/part', part.id, 'view']"
+                                    [routerLink]="['/entities/part', part.id, 'view']"
                                     class="btn btn-info btn-sm">
                                 <fa-icon icon="eye"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
 
                             <button type="submit"
-                                    [routerLink]="['/part', part.id, 'edit']"
+                                    [routerLink]="['/entities/part', part.id, 'edit']"
                                     class="btn btn-primary btn-sm">
                                 <fa-icon icon="pencil-alt"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
