--- a/src/main/webapp/app/entities/scene/scene.component.html
+++ b/src/main/webapp/app/entities/scene/scene.component.html
@@ -2,7 +2,7 @@
     <h2 id="page-heading">
         <span jhiTranslate="nidAuxHistoiresApp.scene.home.title">Scenes</span>
 
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-scene" [routerLink]="['/scene/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-scene" [routerLink]="['/entities/scene/new']">
             <fa-icon icon="plus"></fa-icon>
             <span  jhiTranslate="nidAuxHistoiresApp.scene.home.createLabel">
             Create a new Scene
@@ -33,27 +33,27 @@
             </thead>
             <tbody>
                 <tr *ngFor="let scene of scenes ;trackBy: trackId">
-                    <td><a [routerLink]="['/scene', scene.id, 'view']">{{ scene.id }}</a></td>
+                    <td><a [routerLink]="['/entities/scene', scene.id, 'view']">{{ scene.id }}</a></td>
                     <td>{{ scene.name }}</td>
                     <td>{{ scene.number }}</td>
                     <td>{{ scene.text }}</td>
                     <td>{{ scene.timestampStart | date:'medium' }}</td>
                     <td>
                         <div *ngIf="scene.chapterId">
-                            <a [routerLink]="['/chapter', scene.chapterId , 'view']" >{{ scene.chapterId }}</a>
+                            <a [routerLink]="['/entities/chapter', scene.chapterId , 'view']" >{{ scene.chapterId }}</a>
                         </div>
                     </td>
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
-                                    [routerLink]="['/scene', scene.id, 'view']"
+                                    [routerLink]="['/entities/scene', scene.id, 'view']"
                                     class="btn btn-info btn-sm">
                                 <fa-icon icon="eye"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
 
                             <button type="submit"
-                                    [routerLink]="['/scene', scene.id, 'edit']"
+                                    [routerLink]="['/entities/scene', scene.id, 'edit']"
                                     class="btn btn-primary btn-sm">
                                 <fa-icon icon="pencil-alt"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
