--- a/src/main/webapp/app/entities/idea/idea.component.html
+++ b/src/main/webapp/app/entities/idea/idea.component.html
@@ -2,7 +2,7 @@
     <h2 id="page-heading">
         <span jhiTranslate="nidAuxHistoiresApp.idea.home.title">Ideas</span>
 
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-idea" [routerLink]="['/idea/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-idea" [routerLink]="['/entities/idea/new']">
             <fa-icon icon="plus"></fa-icon>
             <span  jhiTranslate="nidAuxHistoiresApp.idea.home.createLabel">
             Create a new Idea
@@ -31,21 +31,21 @@
             </thead>
             <tbody>
                 <tr *ngFor="let idea of ideas ;trackBy: trackId">
-                    <td><a [routerLink]="['/idea', idea.id, 'view']">{{ idea.id }}</a></td>
+                    <td><a [routerLink]="['/entities/idea', idea.id, 'view']">{{ idea.id }}</a></td>
                     <td>{{ idea.type }}</td>
                     <td>{{ idea.value }}</td>
                     <td>{{ idea.complement }}</td>
                     <td class="text-right">
                         <div class="btn-group">
                             <button type="submit"
-                                    [routerLink]="['/idea', idea.id, 'view']"
+                                    [routerLink]="['/entities/idea', idea.id, 'view']"
                                     class="btn btn-info btn-sm">
                                 <fa-icon icon="eye"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
 
                             <button type="submit"
-                                    [routerLink]="['/idea', idea.id, 'edit']"
+                                    [routerLink]="['/entities/idea', idea.id, 'edit']"
                                     class="btn btn-primary btn-sm">
                                 <fa-icon icon="pencil-alt"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
