--- a/src/main/webapp/app/entities/word-analysis/word-analysis-detail.component.html
+++ b/src/main/webapp/app/entities/word-analysis/word-analysis-detail.component.html
@@ -29,7 +29,7 @@
             </button>
 
             <button type="button"
-                    [routerLink]="['/word-analysis', wordAnalysis.id, 'edit']"
+                    [routerLink]="['/entities/word-analysis', wordAnalysis.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">Edit</span>
             </button>
