Add library view

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -3,6 +3,7 @@
 @import '~bootswatch/dist/lux/variables';
 @import '~bootstrap/scss/variables';
 @import 'variables';
+@import 'style';
 
 /* ==============================================================
 Bootstrap tweaks
