--- a/src/main/webapp/app/entities/book/book-update.component.html
+++ b/src/main/webapp/app/entities/book/book-update.component.html
@@ -24,6 +24,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="nidAuxHistoiresApp.book.description" for="field_description">Description</label>
+                    <input type="text" class="form-control" name="description" id="field_description"
+                           formControlName="description"/>
+                </div>
+
+                <div class="form-group">
                     <label jhiTranslate="nidAuxHistoiresApp.book.image" for="field_images">Image</label>
                     <select class="form-control" id="field_images" multiple name="images" formControlName="images">
                         <option [ngValue]="getSelected(editForm.get('images')!.value, imageOption)" *ngFor="let imageOption of images; trackBy: trackById">{{ imageOption.id }}</option>
