--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -4,10 +4,10 @@
     <router-outlet name="navbar"></router-outlet>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid container-limit">
     <div class="card jh-card">
         <router-outlet></router-outlet>
     </div>
-
-    <jhi-footer></jhi-footer>
 </div>
+
+<jhi-footer></jhi-footer>
