--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -9,6 +9,11 @@
 Bootstrap tweaks
 ===============================================================*/
 
+html,
+body {
+  height: 100%;
+}
+
 body,
 h1,
 h2,
@@ -77,6 +82,11 @@ Generic styles
 
 .footer {
   border-top: 1px solid rgba($black, 0.125);
+}
+
+.container-limit {
+  height: calc(100% - 100px);
+  overflow: auto;
 }
 
 .hand,
