--- a/src/main/webapp/content/scss/variables.scss
+++ b/src/main/webapp/content/scss/variables.scss
@@ -1,7 +1,7 @@
 /* Coolors Exported Palette - coolors.co/d3d0cb-587b7f-e2c044-393e41-1e2019 */
 
 /* RGB */
-$white: #eeeeee;
+$white: #ffffff;
 $gold: #efcc07;
 $dark_gold: #ccad00;
 $gray: #e2e2e2;
