--- a/src/main/webapp/content/scss/style.scss
+++ b/src/main/webapp/content/scss/style.scss
@@ -62,65 +62,6 @@ img {
   margin-left: 12vw;
 }
 
-@media only screen and (max-width: 800px) {
-  .content {
-    position: relative !important;
-  }
-
-  .addapt-summary {
-    height: calc(100% - 62px) !important;
-    margin: 0px;
-    padding-top: 40px;
-  }
-
-  article {
-    width: 90%;
-    margin-left: 5%;
-  }
-
-  .text-dynamic {
-    font-size: 3vw;
-  }
-
-  .h1-dynamic {
-    font-size: 5vw;
-  }
-
-  .h2-dynamic {
-    font-size: 4.5vw;
-  }
-
-  .h3-dynamic {
-    font-size: 4vw;
-  }
-
-  .h4-dynamic {
-    font-size: 3.5v;
-  }
-
-  .h5-dynamic {
-    font-size: 160%;
-  }
-
-  .h6-dynamic {
-    font-size: 150%;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .text-dynamic {
-    font-size: 16px;
-  }
-
-  .h1-dynamic {
-    font-size: 20px;
-  }
-
-  .h2-dynamic {
-    font-size: 18px;
-  }
-}
-
 p {
   font-size: 140%;
   margin-top: 5px;
@@ -130,20 +71,20 @@ p {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.content::-webkit-scrollbar {
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.content {
+.no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
 
-.content {
+.container-limit {
   width: 100%;
   overflow-y: scroll;
-  height: Calc(100% - #{$nav-height});
+  height: Calc(100% - 100px);
 }
 
 .col-20-perc {
