--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,20 @@
 <div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand ml-auto" routerLink="/mentions">
+            <img src="../../../content/images/law.svg" alt="Mentions légales"/>
+            <span jhiTranslate="global.menu.footer.legal-notice">Mentions</span>
+        </a>
+        <a class="navbar-brand" routerLink="/help">
+            <img src="../../../content/images/help.svg" alt="Aide"/>
+            <span jhiTranslate="global.menu.footer.help">Help</span>
+        </a>
+        <a class="navbar-brand" href="https://github.com/Manerial">
+            <img src="../../../content/images/github.svg" alt="Lien pour accéder au github de Manerial"/>
+            <span jhiTranslate="global.menu.footer.github">Github</span>
+        </a>
+        <a class="navbar-brand" href="/discord">
+            <img src="../../../content/images/discord.svg" alt="Lien pour accéder au discord de Manerial"/>
+            <span jhiTranslate="global.menu.footer.discord">Discord</span>
+        </a>
+    </nav>
 </div>
