--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -10,12 +10,13 @@
     </a>
     <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed"
         [ngSwitch]="isAuthenticated()">
-		<form id="searchBar" *ngIf="router.url === '/library'">
-			<input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"
-				placeholder="Rechercher..." (ngModelChange)="search()" aria-controls="search"
-				aria-expanded="false" aria-label="Rechercher">
-		</form>
-        <ul class="navbar-nav ml-auto">
+        <div class="ml-auto"></div>
+        <form *ngIf="router.url === '/library'">
+            <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"
+                placeholder="Rechercher..." (ngModelChange)="search()" aria-controls="search"
+                aria-expanded="false" aria-label="Rechercher">
+        </form>
+        <ul class="navbar-nav">
             <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                 <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
                     <span>
