--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -51,6 +51,7 @@ Generic styles
 
 .jh-card {
   padding: 1.5%;
+  padding-bottom: 1%;
   margin-top: 20px;
   border: none;
 }
@@ -80,10 +81,6 @@ Generic styles
 .readonly {
   background-color: $white;
   opacity: 1;
-}
-
-.footer {
-  border-top: 1px solid rgba($black, 0.125);
 }
 
 .hand,
