Update mapper to have light resources

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -91,6 +91,10 @@ Generic styles
 /* ==========================================================================
 Custom alerts for notification
 ========================================================================== */
+.alert {
+  margin-top: 20px;
+}
+
 .alerts {
   .alert {
     text-overflow: ellipsis;
