--- a/src/main/webapp/content/scss/style.scss
+++ b/src/main/webapp/content/scss/style.scss
@@ -84,7 +84,7 @@ p {
 .container-limit {
   width: 100%;
   overflow-y: scroll;
-  height: Calc(100% - 103px);
+  height: $height_nav;
 }
 
 .col-20-perc {
