--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -11,6 +11,10 @@ Navbar
   color: $navbar-dark-color;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .profile-image {
   height: 1.75em;
   width: 1.75em;
