--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md">
-        <h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>
+        <h1 jhiTranslate="home.title">Welcome, Java Hipster!</h1>
 
         <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
 
