--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -4,7 +4,7 @@
     <router-outlet name="navbar"></router-outlet>
 </div>
 
-<div class="container-fluid container-limit">
+<div class="container-limit">
     <div class="card jh-card">
         <router-outlet></router-outlet>
     </div>
