--- a/src/main/webapp/app/layouts/sidebar/sidebar.scss
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.scss
@@ -6,23 +6,9 @@ p {
 
 h1 {
   margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding-left: 0px !important;
-  font-size: 30px !important;
-}
-
-h2,
-.h2 {
-  font-size: 2vw;
-}
-
-h3,
-.h3 {
-  font-size: 1.75vw;
-}
-
-h4,
-.h4 {
-  font-size: 1.5vw;
 }
 
 h1,
@@ -30,12 +16,12 @@ h2,
 h3,
 h4 {
   text-align: left;
-  padding-left: 10px;
 }
 
 h2,
 h3,
 h4 {
+  padding-left: 10px;
   padding-top: 0px;
   padding-bottom: 5px;
   margin: 0px;
@@ -49,10 +35,8 @@ h4 {
   border-right: 1px solid black;
   margin: 0px;
   text-align: left;
-  float: left;
   height: $height_nav;
   overflow: auto;
-  width: 25%;
   z-index: 1;
 }
 
@@ -61,46 +45,25 @@ h4 {
   flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 880px) {
-  h1 {
-    margin-left: 45px;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .summary {
-    border: none;
-    width: 100%;
-    height: fit-content;
-  }
-  h1 {
-    font-size: 24px;
-  }
-  h2 {
-    font-size: 22px;
-  }
-  h3 {
-    font-size: 20px;
-  }
-  h4 {
-    font-size: 18px;
-  }
-}
-
 .menu-button {
   color: $gold;
-  position: absolute;
+  position: fixed;
   cursor: pointer;
   z-index: 2;
-  margin-left: 15px;
-  margin-top: 15px;
-  width: 30px;
   font-size: 30px !important;
+}
+
+.menu-button fa-icon {
+  position: absolute;
 }
 
 .menu-bkg {
   color: $white;
   z-index: 1;
+}
+
+.menu-arrow {
+  z-index: 2;
 }
 
 a.bkg-white:hover,
