--- a/src/main/webapp/content/scss/style.scss
+++ b/src/main/webapp/content/scss/style.scss
@@ -1,41 +1,8 @@
 @import 'variables';
 
-h1 {
-  font-size: 200%;
-  text-align: center;
-  margin: 0px;
-  padding-top: 10px;
-  padding-bottom: 5px;
-}
-
+h1,
 h2 {
-  font-size: 190%;
-  margin-top: 10px;
-  margin-bottom: 0px;
-}
-
-h3 {
-  font-size: 180%;
-  margin-top: 6px;
-  margin-bottom: 3px;
-}
-
-h4 {
-  font-size: 170%;
-  margin-top: 6px;
-  margin-bottom: 3px;
-}
-
-h5 {
-  font-size: 160%;
-  margin-top: 6px;
-  margin-bottom: 3px;
-}
-
-h6 {
-  font-size: 150%;
-  margin-top: 6px;
-  margin-bottom: 3px;
+  text-align: center;
 }
 
 article {
@@ -44,14 +11,7 @@ article {
 }
 
 .text-dynamic {
-  font-size: 1.5rem;
-}
-
-.btn,
-.page-link,
-.navbar,
-img {
-  user-select: none;
+  font-size: 1.1rem;
 }
 
 .addapt-summary {
@@ -62,12 +22,26 @@ img {
   margin-left: 12vw;
 }
 
+.btn,
+.page-link,
+.navbar,
+img {
+  user-select: none;
+}
+
 p {
   font-size: 140%;
   margin-top: 5px;
   margin-bottom: 0px;
   text-align: justify;
   hyphens: auto;
+}
+
+.jhi-sidebar {
+  position: fixed;
+  width: 25%;
+  left: 0px;
+  top: 62px;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -87,57 +61,18 @@ p {
   height: $height_nav;
 }
 
-.col-20-perc {
-  flex: 0 0 20%;
-  max-width: 20%;
-}
-
-.center {
-  text-align: center;
-}
-
-.mw-50 {
-  max-width: 50% !important;
-}
-
-.long-text-ellipsis {
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.pointer {
-  cursor: pointer;
-}
-
-.bkg-dark {
-  color: #fff !important;
-  background-color: $black !important;
-}
-
-.bkg-gray {
-  color: #000 !important;
-  background-color: $gray !important;
-}
-
 .bkg-white {
-  color: #000 !important;
+  color: $black !important;
   background-color: $white !important;
 }
 
 .bkg-gold {
-  color: #000 !important;
+  color: $black !important;
   background-color: $gold !important;
 }
 
 a.bkg-gold:hover,
-.bkg-gold h2:hover,
-.bkg-gold h3:hover,
-.bkg-gold h4:hover,
 button.bkg-gold:hover {
   background-color: $dark_gold !important;
   cursor: pointer;
-}
-
-.text-gold {
-  color: $gold !important;
 }
