--- a/src/main/webapp/app/layouts/sidebar/sidebar.responsive.scss
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.responsive.scss
@@ -42,6 +42,10 @@
   .menu-button fa-icon {
     right: 0px;
     transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
   }
 
   .summary {
