Add legal notice and help

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -2,19 +2,19 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand ml-auto" routerLink="/mentions">
             <img src="../../../content/images/law.svg" alt="Mentions légales"/>
-            <span jhiTranslate="global.menu.footer.legal-notice">Mentions</span>
+            <span jhiTranslate="footer.legal-notice">Mentions</span>
         </a>
         <a class="navbar-brand" routerLink="/help">
             <img src="../../../content/images/help.svg" alt="Aide"/>
-            <span jhiTranslate="global.menu.footer.help">Help</span>
+            <span jhiTranslate="footer.help">Help</span>
         </a>
-        <a class="navbar-brand" href="https://github.com/Manerial">
+        <a class="navbar-brand" href="githubUrl">
             <img src="../../../content/images/github.svg" alt="Lien pour accéder au github de Manerial"/>
-            <span jhiTranslate="global.menu.footer.github">Github</span>
+            <span jhiTranslate="footer.github">Github</span>
         </a>
-        <a class="navbar-brand" href="/discord">
+        <a class="navbar-brand" href="discordUrl">
             <img src="../../../content/images/discord.svg" alt="Lien pour accéder au discord de Manerial"/>
-            <span jhiTranslate="global.menu.footer.discord">Discord</span>
+            <span jhiTranslate="footer.discord">Discord</span>
         </a>
     </nav>
 </div>
