bug fix on external link urls

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -8,11 +8,11 @@
             <img src="../../../content/images/help.svg" alt="Aide"/>
             <span jhiTranslate="footer.help">Help</span>
         </a>
-        <a class="navbar-brand" href="githubUrl">
+        <a class="navbar-brand" href="{{githubUrl}}">
             <img src="../../../content/images/github.svg" alt="Lien pour accéder au github de Manerial"/>
             <span jhiTranslate="footer.github">Github</span>
         </a>
-        <a class="navbar-brand" href="discordUrl">
+        <a class="navbar-brand" href="{{discordUrl}}">
             <img src="../../../content/images/discord.svg" alt="Lien pour accéder au discord de Manerial"/>
             <span jhiTranslate="footer.discord">Discord</span>
         </a>
