add english translation

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand ml-auto" routerLink="/mentions">
+        <a class="navbar-brand ml-auto" routerLink="/legal-notice">
             <img src="../../../content/images/law.svg" alt="Mentions légales"/>
             <span jhiTranslate="footer.legal-notice">Mentions</span>
         </a>
