--- a/src/main/webapp/app/home/help/help.component.html
+++ b/src/main/webapp/app/home/help/help.component.html
@@ -1,33 +1,27 @@
 <div class="content">
 	<article>
-		<h1>Aide</h1>
-		<h2>Accessibilité tout public</h2>
-		<p>Ce site est conçu pour être accessible au public le plus large possible (contrastes, choix des couleurs) tout
-			en conservant son identité visuelle. Cependant, il est possible que certains points nous aient échappé lors
-			de sa conception, aussi toute remarque constructive sera la bienvenue sur le
-			<a href="{{discordUrl}}">Discord</a>
-			de la communauté, dans la section dédiée à l'accessibilté à tous.
-		</p>
-		<h2>Téléchargement au format Word</h2>
-		<p>Pour télécharger l'œuvre de votre choix, cliquez sur l'icone
-			<fa-icon icon="download"></fa-icon>.
-			Le livre sera téléchargé au format .docx (word).
-		</p>
-		<h2>Convertir au format epub</h2>
-		<p>Pour convertir facilement vos téléchargements au format epub, vous pouvez utiliser Word ou LibreOffice en
-			passant par l'outil d'export : <b>fichier -> exporter vers -> exporter au format EPUB</b> (ordinateur
-			uniquement). Pour un meilleur confort de lecture, sélectionnez l'option "Méthode de cission : saut de pages"
-		</p>
-		<h2>Utilisation des générateurs</h2>
-		<p>Les générateurs sont mis à votre disposition en tant qu'outils ludiques pour vous permettre de créer
-			librement. Ils seront complétés et étoffés dans le cycle de vie du site. Cependant, si vous souhaitez aider
-			à l'élaboration de nouveaux dictionnaires, vous pouvez vous rendre sur le
-			<a href="{{discordUrl}}">Discord</a>
-			de la communauté, dans la section dédiée au partage et a l'amélioration du contenu.
-		</p>
-		<h2>Partager vos œuvres</h2>
-		<p>Vous souhaitez ajouter votre livre sur ce site ? Pas de soucis ! Contactez-nous sur le
-			<a href="{{discordUrl}}">Discord</a> de la communauté, dans la section dédiée aux
-			nouveaux auteurs.</p>
+		<h1 jhiTranslate="help.title"></h1>
+		<div>
+			<h2 jhiTranslate="help.accessibility.title"></h2>
+			<p jhiTranslate="help.accessibility.body" [translateValues]="{ discordUrl: discordUrl }"></p>
+		</div>
+		<div>
+			<h2 jhiTranslate="help.download.title"></h2>
+			<p jhiTranslate="help.download.body1"></p>
+			<fa-icon icon="download"></fa-icon>
+			<p jhiTranslate="help.download.body2"></p>
+		</div>
+		<div>
+			<h2 jhiTranslate="help.convert.title"></h2>
+			<p jhiTranslate="help.convert.body"></p>
+		</div>
+		<div>
+			<h2 jhiTranslate="help.generators.title"></h2>
+			<p jhiTranslate="help.generators.body" [translateValues]="{ discordUrl: discordUrl }"></p>
+		</div>
+		<div>
+			<h2 jhiTranslate="help.sharing.title"></h2>
+			<p jhiTranslate="help.sharing.body" [translateValues]="{ discordUrl: discordUrl }"></p>
+		</div>
 	</article>
 </div>
