--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -2,6 +2,11 @@
 Main page styles
 ========================================================================== */
 
+.row {
+  margin: auto;
+  width: 100%;
+}
+
 .hipster {
   display: inline-block;
   width: 347px;
